# MyCMakeProject

./: .gitignore  README.md
MyCPlusPlusCmakeProject/: CMakeLists.txt  MyCSharpProject
MyCPlusPlusCmakeProject/CSharp/: DDSUtils.cs  DDSWriter.cs  MyCSharpProject.cs
MyCPlusPlusCmakeProject/CSharp/DDS/: DDSListener.cs  DDSState.cs  DDSUtils.cs
MyCPlusPlusCmakeProject/MyCMakeLibrary/: CMakeLists.txt
MyCPlusPlusCmakeProject/MyCMakeLibrary/inc/: CMakeLibrary.h  ObserverClass.h  SubjectClass.h
MyCPlusPlusCmakeProject/MyCMakeLibrary/inc/EventLog/: EventLogger.h
MyCPlusPlusCmakeProject/MyCMakeLibrary/inc/MainAPI/: CmakeInput.h  CmakeInput.h.in  MainAPI.h
MyCPlusPlusCmakeProject/MyCMakeLibrary/inc/Observer/: Observer.h  Subject.h
MyCPlusPlusCmakeProject/MyCMakeLibrary/inc/QRGenerator/: QrCodeInterface.h  QrCodeManager.h
MyCPlusPlusCmakeProject/MyCMakeLibrary/inc/Singleton/: SingletonClass.h
MyCPlusPlusCmakeProject/MyCMakeLibrary/inc/Thread/: ThreadInterface.h
MyCPlusPlusCmakeProject/MyCMakeLibrary/inc/TimeUtil/: TimeUtil.h
MyCPlusPlusCmakeProject/MyCMakeLibrary/lib/: CMakeLibrary.exp  CMakeLibrary.lib
MyCPlusPlusCmakeProject/MyCMakeLibrary/src/: CMakeLibrary.cpp  ObserverClass.cpp  SubjectClass.cpp
MyCPlusPlusCmakeProject/MyCMakeLibrary/src/EventLog/: EventLog.cpp
MyCPlusPlusCmakeProject/MyCMakeLibrary/src/QRGenerator/: QrCodeInterface.cpp  QrCodeManager.cpp  lodepng.cpp  qrcodegen.cpp
MyCPlusPlusCmakeProject/MyCMakeLibrary/src/Singleton/: SingletonClass.cpp
MyCPlusPlusCmakeProject/MyCMakeLibrary/src/Thread/: ThreadInterface.cpp
MyCPlusPlusCmakeProject/MyCMakeTest/: CMakeLists.txt
MyCPlusPlusCmakeProject/MyCMakeTest/_Test/: _Test.cpp
MyCPlusPlusCmakeProject/MyCPlusPlusCmakeProject/: CMakeLists.txt
MyCPlusPlusCmakeProject/MyCPlusPlusCmakeProject/Main/: MyCPlusPlusCmakeProject.cpp
MyCPlusPlusCmakeProject/MyCPlusPlusCmakeProject/_Test/: _Test.cpp
MyCPlusPlusCmakeProject/MyCPlusPlusCmakeProject/inc/: CMakeClass.h  InterviewQ.h
MyCPlusPlusCmakeProject/MyCPlusPlusCmakeProject/src/: CMakeClass.cpp  InterviewQ.cpp
